packages/framework/esm-styleguide/src/workspaces/container/workspace.module.scss
@use '@carbon/styles/scss/spacing';
@use '@carbon/styles/scss/colors';
@use '@carbon/styles/scss/type';
@import '@openmrs/esm-styleguide/src/vars';

$actionPanelOffset: 3rem;

.loader {
  display: flex;
  background-color: $openmrs-background-grey;
  justify-content: center;
  min-height: spacing.$spacing-09;
}

.hiddenExtraWorkspace {
  display: none;
}

/* Desktop */
:global(.omrs-breakpoint-gt-tablet) {
  .workspaceContainerWithActionMenu {
    height: 100%;

    .workspaceFixedContainer {
      right: $actionPanelOffset;
    }
  }

  .workspaceContainerWithoutActionMenu {
    height: 100%;

    .workspaceFixedContainer {
      right: 0;
    }
  }

  .header {
    position: relative;
    box-sizing: content-box;
    border-bottom: 1px solid $text-03;
    background-color: $ui-03;
    height: var(--workspace-header-height);

    a {
      @include type.type-style('heading-compact-02');

      &:hover {
        color: inherit;
      }
    }

    &:not(.maximizedWindow) {
      right: auto;
      left: auto;
    }
  }

  .headerButtons {
    button {
      background-color: $ui-02;
      border-right: 1px solid colors.$gray-20;

      & > svg {
        fill: colors.$cool-gray-100 !important;
      }

      &:hover {
        background-color: $ui-01;
      }
    }
  }

  .maximizedWindow {
    width: calc(100% - $actionPanelOffset) !important;
  }

  .workspaceWindowSpacer {
    height: 100%;
    transition: margin-right 0.5s ease-in-out;
  }

  .workspaceFixedContainer {
    position: fixed;
    top: var(--omrs-navbar-height);
    bottom: 0;
    border-left: 1px solid $text-03;
    display: flex;
    flex-direction: column;
    z-index: 50;
    -webkit-transition: width 0.5s ease-in-out;
    -moz-transition: width 0.5s ease-in-out;
    -o-transition: width 0.5s ease-in-out;
    transition:
      width 0.5s ease-in-out,
      right 0.5s ease-in-out;
  }

  .widerWorkspace {
    width: 32.25rem;

    .workspaceFixedContainer {
      width: 32.25rem;
    }

    &.hiddenRelative {
      margin-right: -32.25rem !important;
    }

    .hiddenFixed {
      right: -32.25rem !important;
    }
  }

  .narrowWorkspace {
    width: 26.25rem;

    .workspaceFixedContainer {
      width: 26.25rem;
    }

    &.hiddenRelative {
      margin-right: -26.25rem !important;
    }

    .hiddenFixed {
      right: -26.25rem !important;
    }
  }

  .workspaceContent {
    background-color: $ui-02;
    overflow-y: auto;
    flex-grow: 1;
  }

  // The parcel makes a div, between the workspace container and the workspace itself
  .workspaceContent > div {
    height: 100%;
  }

  .overlay {
    background-color: $ui-02;
    display: flex;
    flex-direction: column;
    z-index: 1000;
  }

  .overlayHeaderSpacer {
    flex-grow: 1;
  }
}

/* Tablet */
:global(.omrs-breakpoint-lt-desktop) {
  .header {
    position: relative;
    background-color: var(--brand-02);

    a {
      color: $ui-02;
    }

    button {
      color: $ui-02;
      background-color: var(--brand-02);

      &:hover {
        background-color: var(--brand-03);
      }
    }
  }

  .workspaceFixedContainer {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 8002;
    display: flex;
    flex-direction: column;
  }

  .workspaceContainerWithActionMenu {
    .workspaceFixedContainer {
      bottom: var(--bottom-nav-height);
    }
  }

  .overlay {
    background-color: $ui-02;
    display: flex;
    flex-direction: column;
  }

  .overlayCloseButton {
    order: 1;
  }

  .overlayTitle {
    order: 2;
  }

  .workspaceContent {
    background-color: $ui-01;
    overflow-y: auto;
    height: 100%;
  }

  // The parcel makes a div, between the workspace container and the workspace itself
  .workspaceContent > div {
    height: 100%;
  }

  .dynamicWidth {
    width: 100%;
  }
}

// Overriding styles for RTL support
html[dir='rtl'] {
  :global(.omrs-breakpoint-gt-tablet) {
    .workspaceContainerWithActionMenu {
      .workspaceFixedContainer {
        right: unset;
        left: $actionPanelOffset;
      }
    }

    .workspaceContainerWithoutActionMenu {
      height: 100%;

      .workspaceFixedContainer {
        right: unset;
        left: 0;
      }
    }
  }
}

